discussion/kv_engine/184396/184396_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Add CDC Magma API to MagmaMemoryTrackingProxy

Change-Id: Idf2bf082c3ecb78b93e393c1d6b796b598e3b80b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-16 15:11:36.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-16 15:11:54.000000000
Message: 
Patch Set 5: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332639/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-16 15:30:31.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/806/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28: error: no member named "MinValueSize" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.MinValueSize =
                           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/806/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/806/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/984/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(560): error C2039: "MinValueSize": is not a member of "magma::Magma::Config" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/984/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/777/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/777/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1094/ : FAILURE

Compile error at [2023-01-16T15:17:23.786Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1094/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/812/ : FAILURE

Compile error at [2023-01-16T15:18:18.376Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: ?struct magma::Magma::Config? has no member named ?MinValueSize?; did you mean ?GetValueSize??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/812/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/827/ : FAILURE

Compile error at [2023-01-16T15:29:49.782Z] ../kv_engine/engines/ep/tests/module_tests/history_scan_test.cc:41:22:
error: ?MockMagmaKVStore? does not name a type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/827/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/817/ : FAILURE

Compile error at [2023-01-16T15:21:53.946Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: ?struct magma::Magma::Config? has no member named ?MinValueSize?; did you mean ?GetValueSize??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/817/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/826/ : FAILURE

Compile error at [2023-01-16T15:21:11.139Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/826/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/798/ : FAILURE

Compile error at [2023-01-16T15:27:05.641Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/798/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/818/ : FAILURE

Compile error at [2023-01-16T15:24:45.233Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:560:28:
error: no member named "MinValueSize" in "magma::Magma::Config"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/818/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22186/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
